[tool.poetry]
name = "repl_python3_hinamaru"
version = "0.1.0"
description = ""
authors = ["Fr0xty <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
discord = "^1.7.3"
Flask = "^2.0.2"
lxml = "^4.6.4"
youtube_dl = "^2021.6.6"
discord-components = "^2.1.2"
jishaku = "^2.3.2"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
